fixed errors that occurs for android

--- a/index.html
+++ b/index.html
@@ -118,15 +118,13 @@
                     <h3>NekoCafé</h3>
                     <p class="call">11111-11111</p>
                     <p class="location">Shibuya City, Tokyo, Japan</p>
-                    <p class="email">Email Us</p>
+                    <a href="#">Email Us</a>
                 </div>
                 <div class="foot-nav">
                     <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Gallery</a></li>
-                        <li><a href="#">About Us</a></li>
-                    </ul>
+                    <a href="#">Home</a>
+                    <a href="#">Gallery</a>
+                    <a href="#">About Us</a>
                 </div>
             </div>
             <div class="footer-socials">
